--- a/tensorflow/stream_executor/cuda/BUILD
+++ b/tensorflow/stream_executor/cuda/BUILD
@@ -10,6 +10,7 @@ load(
 load(
     "//tensorflow/tsl/platform/default:cuda_build_defs.bzl",
     "if_cuda_is_configured",
+    "if_cuda11_is_configured",
 )
 load(
     "//tensorflow/core/platform:build_config_root.bzl",
