--- a/tensorflow/compiler/mlir/xla/BUILD
+++ b/tensorflow/compiler/mlir/xla/BUILD
@@ -128,8 +128,41 @@ cc_library(
         ":legalize_tf_patterns_inc_gen",
         ":type_to_shape",
         ":xla_legalize_tf_passes_inc_gen",
-        ":xla_legalize_tf_with_tf2xla",
+        "xla_passes_inc_gen",
         "//tensorflow/compiler/mlir/disc:mhlo_disc",
+        "//tensorflow/compiler/mlir/hlo",
+        "//tensorflow/compiler/mlir/hlo:convert_op_folder",
+        "//tensorflow/compiler/mlir/hlo:hlo_ops_base_structs",
+        "//tensorflow/compiler/mlir/tensorflow",
+        "//tensorflow/compiler/xla:shape_util",
+        "//tensorflow/compiler/xla:xla_data_proto_cc",
+        "//tensorflow/compiler/xla/client:padding",
+        "//tensorflow/compiler/xla/client:sharding_builder",
+        "//tensorflow/compiler/xla/client/lib:conv_grad_size_util",
+        "//tensorflow/core:framework",
+        "//tensorflow/core/kernels:conv_grad_shape_utils",
+        "//tensorflow/core/platform:bfloat16",
+        "@llvm-project//llvm:Support",
+        "@llvm-project//mlir:Dialect",
+        "@llvm-project//mlir:IR",
+        "@llvm-project//mlir:Pass",
+        "@llvm-project//mlir:Shape",
+        "@llvm-project//mlir:StandardOps",
+        "@llvm-project//mlir:Support",
+        "@llvm-project//mlir:TensorDialect",
+    ],
+    alwayslink = 1,
+)
+
+cc_library(
+    name = "adjust_layout",
+    srcs = [
+        "transforms/adjust_layout.cc",
+    ],
+    deps = [
+        ":attribute_importer",
+        ":type_to_shape",
+        ":xla_passes_inc_gen",
         "//tensorflow/compiler/mlir/hlo",
         "//tensorflow/compiler/mlir/hlo:convert_op_folder",
         "//tensorflow/compiler/mlir/hlo:hlo_ops_base_structs",
