--- a/tensorflow/compiler/mlir/xla/BUILD
+++ b/tensorflow/compiler/mlir/xla/BUILD
@@ -178,6 +178,8 @@ cc_library(
         ":tf_xla_passes_inc_gen",
         ":type_to_shape",
         ":xla_legalize_tf_passes_inc_gen",
+        "xla_passes_inc_gen",
+        "//tensorflow/compiler/mlir/disc:mhlo_disc",
         "//tensorflow/compiler/mlir/tensorflow",
         "//tensorflow/compiler/xla:xla_data_proto_cc",
         "//tensorflow/compiler/xla/client:padding",
@@ -189,7 +191,6 @@ cc_library(
         "//tensorflow/core/kernels:conv_grad_shape_utils",
         "//tensorflow/core/platform:bfloat16",
         "@llvm-project//llvm:Support",
-        "@llvm-project//mlir:ArithmeticDialect",
         "@llvm-project//mlir:Dialect",
         "@llvm-project//mlir:FuncDialect",
         "@llvm-project//mlir:IR",
@@ -198,6 +199,7 @@ cc_library(
         "@llvm-project//mlir:Support",
         "@llvm-project//mlir:TensorDialect",
     ],
+    alwayslink = 1,
 )
 
 cc_library(
