aicompiler rebase 20220818 aicompiler rebase 20220810
aicompiler rebase 20220714
aicompiler rebase 20220216
aicompiler rebase 20211231

[TO #36679346] rebase TF master code

Link: https://code.aone.alibaba-inc.com/algo/tensorflow_google/codereview/6580718

* rebase orig tensorflow

* update

* Merge branch 'features/aicompiler' of gitlab.alibaba-inc.com:algo/tensorflow_google into features/rebase_orig_tf

* update as comment

* remove unused hdr

try to remove whole-archive from .bazelrc

[to #37283318] bugfix: mhlo.TransposeOp folding

Link: https://code.aone.alibaba-inc.com/algo/tensorflow_google/codereview/6783844

Fix a bug in TF_PadV2Op lowering

Hide cublasLt API for cuda version lower than 11.0.

[to #36528554] feat: se multi-stream & default stream support

Link: https://code.aone.alibaba-inc.com/algo/tensorflow_google/codereview/6415328

--- a/tensorflow/compiler/xla/mlir_hlo/BUILD
+++ b/tensorflow/compiler/xla/mlir_hlo/BUILD
@@ -1117,6 +1117,7 @@ cc_library(
         ":mlir_hlo",
         "@llvm-project//llvm:Support",
         "@llvm-project//mlir:ArithmeticDialect",
+        "@llvm-project//mlir:ArithmeticTransforms",
         "@llvm-project//mlir:BufferizationDialect",
         "@llvm-project//mlir:BufferizationTransforms",
         "@llvm-project//mlir:FuncDialect",
@@ -1128,6 +1129,7 @@ cc_library(
         "@llvm-project//mlir:ShapeTransforms",
         "@llvm-project//mlir:Support",
         "@llvm-project//mlir:TensorDialect",
+        "@llvm-project//mlir:TensorTransforms",
         "@llvm-project//mlir:Transforms",
     ],
 )
