--- a/.bazelrc
+++ b/.bazelrc
@@ -615,7 +615,9 @@ test:release_base --test_size_filters=small,medium
 
 build:release_cpu_linux --config=release_base
 build:release_cpu_linux --config=avx_linux
-build:release_cpu_linux --crosstool_top="@ubuntu20.04-gcc9_manylinux2014-cuda11.2-cudnn8.1-tensorrt7.2_config_cuda//crosstool:toolchain"
+# BladeDISC modify starts: Just use local tool chain to build.
+#build:release_cpu_linux --crosstool_top="@ubuntu20.04-gcc9_manylinux2014-cuda11.2-cudnn8.1-tensorrt7.2_config_cuda//crosstool:toolchain"
+# BladeDISC modify ends
 test:release_cpu_linux --test_env=LD_LIBRARY_PATH
 
 build:release_cpu_macos --config=release_base
